[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steam_monitor"
version = "1.3.1"
description = "Tool implementing real-time tracking of Steam players activities"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
authors = [{ name = "Michal Szymanski", email = "misiektoja-pypi@rm-rf.ninja" }]
requires-python = ">=3.6"
dependencies = [
  "steam[client]>=1.4.3",
  "requests>=2.0",
  "python-dateutil>=2.8",
  "python-dotenv>=0.19",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
]
keywords = ["steam", "monitoring", "tracking", "real-time", "osint"]

[project.urls]
Homepage = "https://github.com/misiektoja/steam_monitor"
Source   = "https://github.com/misiektoja/steam_monitor"
Changelog= "https://github.com/misiektoja/steam_monitor/blob/main/RELEASE_NOTES.md"

[project.scripts]
steam_monitor = "steam_monitor:main"

[tool.setuptools]
py-modules = ["steam_monitor"]
include-package-data = true
